@@ -13,7 +13,8 @@ import com.gregtechceu.gtceu.api.tag.TagPrefix;
 import com.gregtechceu.gtceu.api.item.tool.ToolHelper;
 import com.gregtechceu.gtceu.common.recipe.builder.*;
 
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.data.recipes.RecipeOutput;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
@@ -25,150 +26,149 @@ import com.tterrag.registrate.util.entry.ItemProviderEntry;
 import it.unimi.dsi.fastutil.chars.*;
 import it.unimi.dsi.fastutil.objects.Reference2LongOpenHashMap;
 import org.jetbrains.annotations.NotNull;
-import java.util.function.Consumer;
 
 public class VanillaRecipeHelper {
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                          ItemStack output) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input, output);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          TagKey<Item> input, ItemStack output) {
         addSmeltingRecipe(provider, regName, input, output, 0.0f);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                          ItemStack output, float experience) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, Ingredient input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, Ingredient input,
                                          ItemStack output, float experience) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          Ingredient input, ItemStack output, float experience) {
         new SmeltingRecipeBuilder(regName).input(input).output(output).cookingTime(200).experience(experience)
                 .save(provider);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          TagKey<Item> input, ItemStack output, float experience) {
         new SmeltingRecipeBuilder(regName).input(input).output(output).cookingTime(200).experience(experience)
                 .save(provider);
     }
 
-    public static void addBlastingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addBlastingRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                          ItemStack output, float experience) {
         addBlastingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addBlastingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, Ingredient input,
+    public static void addBlastingRecipe(RecipeOutput provider, @NotNull String regName, Ingredient input,
                                          ItemStack output, float experience) {
         addBlastingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addBlastingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addBlastingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          Ingredient input, ItemStack output, float experience) {
         new BlastingRecipeBuilder(regName).input(input).output(output).cookingTime(100).experience(experience)
                 .save(provider);
     }
 
-    public static void addBlastingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addBlastingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          TagKey<Item> input, ItemStack output, float experience) {
         new BlastingRecipeBuilder(regName).input(input).output(output).cookingTime(100).experience(experience)
                 .save(provider);
     }
 
-    public static void addSmokingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addSmokingRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                         ItemStack output, float experience) {
         addSmokingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addSmokingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, ItemStack input,
+    public static void addSmokingRecipe(RecipeOutput provider, @NotNull String regName, ItemStack input,
                                         ItemStack output, float experience) {
         addSmokingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addSmokingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addSmokingRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                         ItemStack output) {
         addSmokingRecipe(provider, GTCEu.id(regName), input, output, 0);
     }
 
-    public static void addSmokingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, ItemStack input,
+    public static void addSmokingRecipe(RecipeOutput provider, @NotNull String regName, ItemStack input,
                                         ItemStack output) {
         addSmokingRecipe(provider, GTCEu.id(regName), input, output, 0);
     }
 
-    public static void addSmokingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addSmokingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                         TagKey<Item> input, ItemStack output, float experience) {
         new SmokingRecipeBuilder(regName).input(input).output(output).cookingTime(100).experience(experience)
                 .save(provider);
     }
 
-    public static void addSmokingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addSmokingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                         ItemStack input, ItemStack output, float experience) {
         new SmokingRecipeBuilder(regName).input(input).output(output).cookingTime(100).experience(experience)
                 .save(provider);
     }
 
-    public static void addCampfireRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, ItemStack input,
+    public static void addCampfireRecipe(RecipeOutput provider, @NotNull String regName, ItemStack input,
                                          ItemStack output, float experience) {
         addCampfireRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addCampfireRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, ItemStack input,
+    public static void addCampfireRecipe(RecipeOutput provider, @NotNull String regName, ItemStack input,
                                          ItemStack output) {
         addCampfireRecipe(provider, GTCEu.id(regName), input, output, 0);
     }
 
-    public static void addCampfireRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addCampfireRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          ItemStack input, ItemStack output, float experience) {
         new CampfireRecipeBuilder(regName).input(input).output(output).cookingTime(100).experience(experience)
                 .save(provider);
     }
 
-    public static void addCampfireRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addCampfireRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                          ItemStack output, float experience) {
         addCampfireRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addCampfireRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, TagKey<Item> input,
+    public static void addCampfireRecipe(RecipeOutput provider, @NotNull String regName, TagKey<Item> input,
                                          ItemStack output) {
         addCampfireRecipe(provider, GTCEu.id(regName), input, output, 0);
     }
 
-    public static void addCampfireRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addCampfireRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          TagKey<Item> input, ItemStack output, float experience) {
         new CampfireRecipeBuilder(regName).input(input).output(output).cookingTime(100).experience(experience)
                 .save(provider);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, ItemStack input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, ItemStack input,
                                          ItemStack output) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input, output, 0.0f);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, Item input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, Item input,
                                          Item output) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input.getDefaultInstance(), output.getDefaultInstance(), 0.0f);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, Item input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, Item input,
                                          Item output, float experience) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input.getDefaultInstance(), output.getDefaultInstance(),
                 experience);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName, ItemStack input,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull String regName, ItemStack input,
                                          ItemStack output, float experience) {
         addSmeltingRecipe(provider, GTCEu.id(regName), input, output, experience);
     }
 
-    public static void addSmeltingRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addSmeltingRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                          ItemStack input, ItemStack output, float experience) {
         new SmeltingRecipeBuilder(regName).input(input).output(output).cookingTime(200).experience(experience)
                 .save(provider);
@@ -177,41 +177,41 @@ public class VanillaRecipeHelper {
     /**
      * Adds a shaped recipe which clears the nbt of the outputs
      *
-     * @see VanillaRecipeHelper#addShapedRecipe(Consumer, String, ItemStack, Object...)
+     * @see VanillaRecipeHelper#addShapedRecipe(RecipeOutput, String, ItemStack, Object...)
      */
-    public static void addShapedNBTClearingRecipe(Consumer<FinishedRecipe> provider, String regName, ItemStack result,
+    public static void addShapedNBTClearingRecipe(RecipeOutput provider, String regName, ItemStack result,
                                                   Object... recipe) {
         addStrictShapedRecipe(provider, regName, result, recipe);
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addShapedRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName,
+    public static void addShapedRecipe(RecipeOutput provider, @NotNull String regName,
                                        @NotNull ItemStack result, @NotNull Object... recipe) {
         addShapedRecipe(provider, GTCEu.id(regName), result, recipe);
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addShapedRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addShapedRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                        @NotNull ItemStack result, @NotNull Object... recipe) {
         addShapedRecipe(provider, false, regName, result, recipe);
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addStrictShapedRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName,
+    public static void addStrictShapedRecipe(RecipeOutput provider, @NotNull String regName,
                                              @NotNull ItemStack result, @NotNull Object... recipe) {
         addStrictShapedRecipe(provider, GTCEu.id(regName), result, recipe);
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addStrictShapedRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addStrictShapedRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                              @NotNull ItemStack result, @NotNull Object... recipe) {
         addStrictShapedRecipe(provider, false, regName, result, recipe);
     }
@@ -242,7 +242,7 @@ public class VanillaRecipeHelper {
      * @param result              the output for the recipe
      * @param recipe              the contents of the recipe
      */
-    public static void addShapedRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData, boolean isStrict,
+    public static void addShapedRecipe(RecipeOutput provider, boolean setMaterialInfoData, boolean isStrict,
                                        @NotNull ResourceLocation regName, @NotNull ItemStack result,
                                        @NotNull Object... recipe) {
         var builder = new ShapedRecipeBuilder(regName).output(result);
@@ -271,25 +271,24 @@ public class VanillaRecipeHelper {
             if (o instanceof Character sign) {
                 var content = recipe[i + 1];
                 i++;
-                if (content instanceof Ingredient ingredient) {
-                    builder.define(sign, ingredient);
-                } else if (content instanceof ItemStack itemStack) {
-                    builder.define(sign, itemStack);
-                } else if (content instanceof TagKey<?> key) {
-                    builder.define(sign, (TagKey<Item>) key);
-                } else if (content instanceof TagPrefix prefix) {
-                    if (prefix.getItemParentTags().length > 0) {
-                        builder.define(sign, prefix.getItemParentTags()[0]);
+                switch (content) {
+                    case Ingredient ingredient -> builder.define(sign, ingredient);
+                    case ItemStack itemStack -> builder.define(sign, itemStack);
+                    case TagKey<?> key when key.isFor(Registries.ITEM) -> builder.define(sign, (TagKey<Item>) key);
+                    case TagPrefix prefix -> {
+                        if (prefix.getItemParentTags().length > 0) {
+                            builder.define(sign, prefix.getItemParentTags()[0]);
+                        }
                     }
-                } else if (content instanceof ItemLike itemLike) {
-                    builder.define(sign, itemLike);
-                } else if (content instanceof MaterialEntry entry) {
-                    TagKey<Item> tag = ChemicalHelper.getTag(entry.tagPrefix(), entry.material());
-                    if (tag != null) {
-                        builder.define(sign, tag);
-                    } else builder.define(sign, ChemicalHelper.get(entry.tagPrefix(), entry.material()));
-                } else if (content instanceof ItemProviderEntry<?> entry) {
-                    builder.define(sign, entry.asStack());
+                    case ItemLike itemLike -> builder.define(sign, itemLike);
+                    case MaterialEntry(TagPrefix tagPrefix, Material material) -> {
+                        TagKey<Item> tag = ChemicalHelper.getTag(tagPrefix, material);
+                        if (tag != null) {
+                            builder.define(sign, tag);
+                        } else builder.define(sign, ChemicalHelper.get(tagPrefix, material));
+                    }
+                    default -> {
+                    }
                 }
             }
         }
@@ -304,37 +303,37 @@ public class VanillaRecipeHelper {
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addShapedRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                        @NotNull String regName, @NotNull ItemStack result, @NotNull Object... recipe) {
         addShapedRecipe(provider, setMaterialInfoData, GTCEu.id(regName), result, recipe);
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addShapedRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                        @NotNull ResourceLocation regName, @NotNull ItemStack result,
                                        @NotNull Object... recipe) {
         addShapedRecipe(provider, setMaterialInfoData, false, regName, result, recipe);
     }
 
     /**
-     * @see #addShapedRecipe(Consumer, boolean, boolean, ResourceLocation, ItemStack, Object...)
+     * @see #addShapedRecipe(RecipeOutput, boolean, boolean, ResourceLocation, ItemStack, Object...)
      */
-    public static void addStrictShapedRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addStrictShapedRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                              @NotNull ResourceLocation regName, @NotNull ItemStack result,
                                              @NotNull Object... recipe) {
         addShapedRecipe(provider, setMaterialInfoData, true, regName, result, recipe);
     }
 
-    public static void addShapelessRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName,
+    public static void addShapelessRecipe(RecipeOutput provider, @NotNull String regName,
                                           @NotNull ItemStack result, @NotNull Object... recipe) {
         addShapelessRecipe(provider, GTCEu.id(regName), result, recipe);
     }
 
-    public static void addShapedEnergyTransferRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedEnergyTransferRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                                      boolean overrideCharge, boolean transferMaxCharge,
                                                      @NotNull ResourceLocation regName,
                                                      @NotNull Ingredient chargeIngredient, @NotNull ItemStack result,
@@ -365,26 +364,24 @@ public class VanillaRecipeHelper {
             if (o instanceof Character sign) {
                 var content = recipe[i + 1];
                 i++;
-                if (content instanceof Ingredient ingredient) {
-                    builder.define(sign, ingredient);
-                } else if (content instanceof ItemStack itemStack) {
-                    builder.define(sign, itemStack);
-                } else if (content instanceof TagKey<?> key) {
-                    builder.define(sign, (TagKey<Item>) key);
-                } else if (content instanceof ItemLike itemLike) {
-                    builder.define(sign, itemLike);
-                } else if (content instanceof MaterialEntry entry) {
-                    TagKey<Item> tag = ChemicalHelper.getTag(entry.tagPrefix(), entry.material());
-                    if (tag != null) {
-                        builder.define(sign, tag);
-                    } else builder.define(sign, ChemicalHelper.get(entry.tagPrefix(), entry.material()));
-                } else if (content instanceof ItemProviderEntry<?> entry) {
-                    builder.define(sign, entry.asStack());
+                switch (content) {
+                    case Ingredient ingredient -> builder.define(sign, ingredient);
+                    case ItemStack itemStack -> builder.define(sign, itemStack);
+                    case TagKey<?> key when key.isFor(Registries.ITEM) -> builder.define(sign, (TagKey<Item>) key);
+                    case ItemLike itemLike -> builder.define(sign, itemLike);
+                    case MaterialEntry(TagPrefix tagPrefix, Material material) -> {
+                        TagKey<Item> tag = ChemicalHelper.getTag(tagPrefix, material);
+                        if (tag != null) {
+                            builder.define(sign, tag);
+                        } else builder.define(sign, ChemicalHelper.get(tagPrefix, material));
+                    }
+                    default -> {
+                    }
                 }
             }
         }
         for (Character c : set) {
-            builder.define(c, ToolHelper.getToolFromSymbol(c).itemTags.get(0));
+            builder.define(c, ToolHelper.getToolFromSymbol(c).itemTags.getFirst());
         }
         builder.save(provider);
 
@@ -393,7 +390,7 @@ public class VanillaRecipeHelper {
         }
     }
 
-    public static void addShapedEnergyTransferRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedEnergyTransferRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                                      boolean overrideCharge, boolean transferMaxCharge,
                                                      @NotNull String regName, @NotNull Ingredient chargeIngredient,
                                                      @NotNull ItemStack result, @NotNull Object... recipe) {
@@ -401,7 +398,7 @@ public class VanillaRecipeHelper {
                 GTCEu.id(regName), chargeIngredient, result, recipe);
     }
 
-    public static void addShapedFluidContainerRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedFluidContainerRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                                      boolean isStrict,
                                                      @NotNull ResourceLocation regName, @NotNull ItemStack result,
                                                      @NotNull Object... recipe) {
@@ -431,30 +428,29 @@ public class VanillaRecipeHelper {
             if (o instanceof Character sign) {
                 var content = recipe[i + 1];
                 i++;
-                if (content instanceof Ingredient ingredient) {
-                    builder.define(sign, ingredient);
-                } else if (content instanceof ItemStack itemStack) {
-                    builder.define(sign, itemStack);
-                } else if (content instanceof TagKey<?> key) {
-                    builder.define(sign, (TagKey<Item>) key);
-                } else if (content instanceof TagPrefix prefix) {
-                    if (prefix.getItemParentTags().length > 0) {
-                        builder.define(sign, prefix.getItemParentTags()[0]);
+                switch (content) {
+                    case Ingredient ingredient -> builder.define(sign, ingredient);
+                    case ItemStack itemStack -> builder.define(sign, itemStack);
+                    case TagKey<?> key when key.isFor(Registries.ITEM) -> builder.define(sign, (TagKey<Item>) key);
+                    case TagPrefix prefix -> {
+                        if (prefix.getItemParentTags().length > 0) {
+                            builder.define(sign, prefix.getItemParentTags()[0]);
+                        }
                     }
-                } else if (content instanceof ItemLike itemLike) {
-                    builder.define(sign, itemLike);
-                } else if (content instanceof MaterialEntry entry) {
-                    TagKey<Item> tag = ChemicalHelper.getTag(entry.tagPrefix(), entry.material());
-                    if (tag != null) {
-                        builder.define(sign, tag);
-                    } else builder.define(sign, ChemicalHelper.get(entry.tagPrefix(), entry.material()));
-                } else if (content instanceof ItemProviderEntry<?> entry) {
-                    builder.define(sign, entry.asStack());
+                    case ItemLike itemLike -> builder.define(sign, itemLike);
+                    case MaterialEntry(TagPrefix tagPrefix, Material material) -> {
+                        TagKey<Item> tag = ChemicalHelper.getTag(tagPrefix, material);
+                        if (tag != null) {
+                            builder.define(sign, tag);
+                        } else builder.define(sign, ChemicalHelper.get(tagPrefix, material));
+                    }
+                    default -> {
+                    }
                 }
             }
         }
         for (Character c : set) {
-            builder.define(c, ToolHelper.getToolFromSymbol(c).itemTags.get(0));
+            builder.define(c, ToolHelper.getToolFromSymbol(c).itemTags.getFirst());
         }
 
         builder.save(provider);
@@ -464,26 +460,26 @@ public class VanillaRecipeHelper {
         }
     }
 
-    public static void addShapedFluidContainerRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedFluidContainerRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                                      @NotNull String regName, @NotNull ItemStack result,
                                                      @NotNull Object... recipe) {
         addShapedFluidContainerRecipe(provider, setMaterialInfoData, GTCEu.id(regName), result, recipe);
     }
 
-    public static void addShapedFluidContainerRecipe(Consumer<FinishedRecipe> provider, boolean setMaterialInfoData,
+    public static void addShapedFluidContainerRecipe(RecipeOutput provider, boolean setMaterialInfoData,
                                                      @NotNull ResourceLocation regName, @NotNull ItemStack result,
 
                                                      @NotNull Object... recipe) {
         addShapedFluidContainerRecipe(provider, setMaterialInfoData, false, regName, result, recipe);
     }
 
-    public static void addShapedFluidContainerRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName,
+    public static void addShapedFluidContainerRecipe(RecipeOutput provider, @NotNull String regName,
                                                      @NotNull ItemStack result,
                                                      @NotNull Object... recipe) {
         addShapedFluidContainerRecipe(provider, GTCEu.id(regName), result, recipe);
     }
 
-    public static void addShapedFluidContainerRecipe(Consumer<FinishedRecipe> provider,
+    public static void addShapedFluidContainerRecipe(RecipeOutput provider,
                                                      @NotNull ResourceLocation regName,
                                                      @NotNull ItemStack result,
                                                      @NotNull Object... recipe) {
@@ -493,35 +489,32 @@ public class VanillaRecipeHelper {
     /**
      * Adds a shapeless recipe which clears the nbt of the outputs
      *
-     * @see VanillaRecipeHelper#addShapelessRecipe(Consumer, String, ItemStack, Object...)
+     * @see VanillaRecipeHelper#addShapelessRecipe(RecipeOutput, String, ItemStack, Object...)
      */
-    public static void addShapelessNBTClearingRecipe(Consumer<FinishedRecipe> provider, @NotNull String regName,
+    public static void addShapelessNBTClearingRecipe(RecipeOutput provider, @NotNull String regName,
                                                      @NotNull ItemStack result,
                                                      @NotNull Object... recipe) {
         addShapelessRecipe(provider, regName, result, recipe);
     }
 
-    public static void addShapelessRecipe(Consumer<FinishedRecipe> provider, @NotNull ResourceLocation regName,
+    public static void addShapelessRecipe(RecipeOutput provider, @NotNull ResourceLocation regName,
                                           @NotNull ItemStack result, @NotNull Object... recipe) {
         var builder = new ShapelessRecipeBuilder(regName).output(result);
         for (Object content : recipe) {
-            if (content instanceof Ingredient ingredient) {
-                builder.requires(ingredient);
-            } else if (content instanceof ItemStack itemStack) {
-                builder.requires(itemStack);
-            } else if (content instanceof TagKey<?> key) {
-                builder.requires((TagKey<Item>) key);
-            } else if (content instanceof ItemLike itemLike) {
-                builder.requires(itemLike);
-            } else if (content instanceof MaterialEntry entry) {
-                TagKey<Item> tag = ChemicalHelper.getTag(entry.tagPrefix(), entry.material());
-                if (tag != null) {
-                    builder.requires(tag);
-                } else builder.requires(ChemicalHelper.get(entry.tagPrefix(), entry.material()));
-            } else if (content instanceof ItemProviderEntry<?> entry) {
-                builder.requires(entry.asStack());
-            } else if (content instanceof Character c) {
-                builder.requires(ToolHelper.getToolFromSymbol(c).itemTags.get(0));
+            switch (content) {
+                case Ingredient ingredient -> builder.requires(ingredient);
+                case ItemStack itemStack -> builder.requires(itemStack);
+                case TagKey<?> key when key.isFor(Registries.ITEM) -> builder.requires((TagKey<Item>) key);
+                case ItemLike itemLike -> builder.requires(itemLike);
+                case MaterialEntry(TagPrefix tagPrefix, Material material) -> {
+                    TagKey<Item> tag = ChemicalHelper.getTag(tagPrefix, material);
+                    if (tag != null) {
+                        builder.requires(tag);
+                    } else builder.requires(ChemicalHelper.get(tagPrefix, material));
+                }
+                case Character c -> builder.requires(ToolHelper.getToolFromSymbol(c).itemTags.getFirst());
+                default -> {
+                }
             }
         }
         builder.save(provider);
@@ -565,25 +558,28 @@ public class VanillaRecipeHelper {
             if (lastChar == ' ') return null;
 
             ItemLike itemLike;
-            if (ingredient instanceof Ingredient ingr) {
-                ItemStack[] stacks = ingr.getItems();
-                if (stacks.length == 0) continue;
-                ItemStack stack = stacks[0];
-                if (stack == ItemStack.EMPTY) continue;
-                itemLike = stack.getItem();
-            } else if (ingredient instanceof ItemStack itemStack) {
-                itemLike = itemStack.getItem();
-            } else if (ingredient instanceof TagKey<?> key) {
-                continue; // todo can this be improved?
-            } else if (ingredient instanceof ItemLike) {
-                itemLike = (ItemLike) ingredient;
-            } else if (ingredient instanceof MaterialEntry entry) {
-                ItemStack stack = ChemicalHelper.get(entry.tagPrefix(), entry.material());
-                if (stack == ItemStack.EMPTY) continue;
-                itemLike = stack.getItem();
-            } else if (ingredient instanceof ItemProviderEntry<?> entry) {
-                itemLike = entry.asItem();
-            } else continue; // throw out bad entries
+            switch (ingredient) {
+                case Ingredient ingr -> {
+                    ItemStack[] stacks = ingr.getItems();
+                    if (stacks.length == 0) continue;
+                    ItemStack stack = stacks[0];
+                    if (stack == ItemStack.EMPTY) continue;
+                    itemLike = stack.getItem();
+                }
+                case ItemStack itemStack -> itemLike = itemStack.getItem();
+                case TagKey<?> key -> {
+                    continue; // todo can this be improved?
+                }
+                case ItemLike like -> itemLike = like;
+                case MaterialEntry(TagPrefix tagPrefix, Material material) -> {
+                    ItemStack stack = ChemicalHelper.get(tagPrefix, material);
+                    if (stack == ItemStack.EMPTY) continue;
+                    itemLike = stack.getItem();
+                }
+                default -> {
+                    continue; // throw out bad entries
+                }
+            }
 
             // First try to get ItemMaterialInfo
             ItemMaterialInfo info = ItemMaterialData.getMaterialInfo(itemLike);
